# dag-modelling

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  conftest.py  pyproject.toml
dagflow/core/: labels.py  storage.py
dagflow/export/: to_root.py
dagflow/plot/: plot.py
dagflow/tools/profiling/: fit_simulation_profiling.py
example/: example.py
src/dag_modelling/bundles/: file_reader.py
src/dag_modelling/core/: labels.py  make_fcn.py  storage.py
src/dag_modelling/lib/: arithmetic.py
src/dag_modelling/parameters/: parameter.py
src/dag_modelling/plot/: graphviz.py  plot.py
src/dag_modelling/tools/: graph_walker.py  make_fcn.py  save_matrices.py  save_records.py
src/dagflow/bundles/: load_parameters.py  make_y_parameters_for_x.py
src/dagflow/core/: iterators.py  node.py  node_base.py  output.py  storage.py
src/dagflow/export/: to_root.py
src/dagflow/plot/: plot.py
src/dagflow/tools/: schema.py
tests/bundles/: test_load_array.py  test_load_graph.py  test_load_hist.py  test_load_parameters_extended.py  test_load_record.py
tests/core/: test_allocation.py  test_close_open.py  test_connection.py  test_containers.py  test_function_switch.py  test_graph.py  test_graph_big.py  test_graph_scale.py  test_graph_small.py  test_hooks.py  test_input_strategy.py  test_make_fcn.py  test_makefcn.py  test_metanode.py  test_output.py
tests/export/: test_to_root.py
tests/lib/: test_arithmetic.py  test_exponential.py  test_trigonometry.py
tests/lib/axis/: test_BinCenter.py  test_MeshToEdges.py  test_bin_center.py  test_bin_width.py  test_mesh_to_edges.py
tests/lib/calculus/: test_Jacobian.py  test_jacobian.py
tests/lib/common/: test_Array.py  test_Cache_Copy.py  test_Proxy.py  test_array.py  test_cache_copy.py  test_concatenation.py  test_proxy.py  test_view.py  test_view_concat.py
tests/lib/hist/: test_axis_distortion_matrix.py  test_axis_distortion_matrix_pointwise.py  test_rebin.py
tests/lib/integration/: test_Integrator.py  test_IntegratorCore.py  test_integrator.py  test_integrator_core.py
tests/lib/interpolation/: test_Interpolator.py  test_InterpolatorCore.py  test_SegmentIndex.py  test_interpolator.py  test_interpolator_core.py  test_segment_index.py
tests/lib/linalg/: test_LinearFunction.py  test_MatrixProductDDt.py  test_MatrixProductDVDt.py  test_VectorMatrixProduct.py  test_cholesky.py  test_linear_function.py  test_matrix_product_a_b.py  test_matrix_product_d_dt.py  test_matrix_product_d_v_dt.py  test_vector_matrix_product.py
tests/lib/normalization/: test_NormalizeMatrix.py  test_RenormalizeDiag.py  test_normalize_matrix.py  test_renormalize_diag.py
tests/lib/parameters/: test_ParArrayInput.py  test_par_array_input.py
tests/lib/physics/: test_energy_resolution.py  (+1 more)
tests/parameters/: test_load_parameters.py  test_parameters.py
tests/tools/: test_graph_walker.py  test_make_fcn.py  test_to_root.py
tests/type_functions/: test_check_edges.py  test_check_input.py  test_copy_dtype_shape.py  test_inputs_number.py  test_method_sequence_caller.py
(+49 files in other folders)
