[project]
name = "dag-modelling"
version = "0.11"
description = "The DAGModelling package is a python implementation of the dataflow programming with the lazy graph evaluation."
authors = [{ name = "DAGModelling Team", email = "dagflow@jinr.ru" }]
maintainers = [{ name = "DAGModelling Team", email = "dagflow@jinr.ru" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "contextlib2",
  "h5py",
  "latexdatax",
  "matplotlib",
  "numba",
  "numpy",
  "ordered-set",
  "pandas",
  "pygraphviz",
  "pyyaml",
  "schema",
  "scipy",
  "tabulate",
  "uproot",
  "plotille",
  "nested-mapping",
]

[project.urls]
homepage = "https://github.com/dagflow-team/dag-modelling"
repository = "https://github.com/dagflow-team/dag-modelling"
documentation = "https://github.com/dagflow-team/dag-modelling/wiki"
"DAGModelling Team" = "https://github.com/dagflow-team"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage"]

[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
  "tests*",
  "docs*",
  "example*",
]
