[build-system]
build-backend = "setuptools.build_meta"

requires = [ "packaging", "setuptools", "setuptools-scm", "wheel" ]

[project]
name = "dag-modelling"
description = "A python implementation of the vectorized direct acyclic graph programming with lazy evaluation"
readme = "README.md"
license = "MIT"
maintainers = [ { name = "DAGModelling Team", email = "dagflow@jinr.ru" } ]
authors = [ { name = "DAGModelling Team", email = "dagflow@jinr.ru" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "contextlib2",
  "h5py",
  "latexdatax",
  "matplotlib",
  "nested-mapping>=0.11",
  "numba",
  "numpy",
  "ordered-set",
  "pandas",
  "plotille",
  "pyyaml",
  "schema",
  "scipy",
  "tabulate",
  "uproot",
]

optional-dependencies.extra = [ "pygraphviz" ]
optional-dependencies.test = [ "coverage", "pygraphviz", "pytest", "pytest-cov" ]
urls."Bug Tracker" = "https://github.com/dagflow-team/dag-modelling/issues"
urls."DAGModelling Team" = "https://github.com/dagflow-team"
urls.documentation = "https://github.com/dagflow-team/dag-modelling/wiki"
urls.homepage = "https://github.com/dagflow-team/dag-modelling"
urls.repository = "https://github.com/dagflow-team/dag-modelling"

[tool.setuptools.packages.find]
where = [ "src" ]
exclude = [
  "tests*",
  "docs*",
  "example*",
]

[tool.setuptools_scm]
write_to = "src/dag_modelling/__version__.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 5
